updated on 8/12/23 home page completed

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,1 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");/*# sourceMappingURL=Footer.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+.footerMainContainer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+.footerContainer {
+  background-color: #00A896;
+  padding: 4px 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footerContainer .totalsContainer h2 {
+  margin-top: -12px;
+}
+.footerContainer .footerCheckoutBtn {
+  padding: 15px;
+  width: 150px;
+  border: none;
+  background-color: #ffffff;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}/*# sourceMappingURL=Footer.css.map */
