--- a/src/Components/HomeAddandSub/HomeAddandSub.css
+++ b/src/Components/HomeAddandSub/HomeAddandSub.css
@@ -4,11 +4,13 @@
 }
 .homeAddandSubContainer button {
   height: 30px;
+  width: 30px;
   background-color: #ffffff;
   border: none;
 }
 .homeAddandSubContainer button:hover {
   background-color: rgb(237, 237, 237);
+  cursor: pointer;
 }
 .homeAddandSubContainer .homeAddsubItems {
   width: 50px;
