--- a/src/Components/HomeAddandSub/HomeAddandSub.scss
+++ b/src/Components/HomeAddandSub/HomeAddandSub.scss
@@ -5,11 +5,13 @@
 
     button{
         height: 30px;
+        width: 30px;
         background-color: $secondaryColor;
         border: none;
      
         &:hover{
             background-color: rgb(237, 237, 237);
+            cursor: pointer;
             
         }
     }
