--- a/src/Components/Categories/Categories.scss
+++ b/src/Components/Categories/Categories.scss
@@ -2,10 +2,18 @@
 
 
 .categoriesContainerMain{
-    padding: 0 32px;
+  
+    scrollbar-width: none;
+    overflow-x:auto;
+   
+    
+    &::-webkit-scrollbar {
+        display: none;
+      }
     .categoriesContainer{
+        padding: 0 64px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-between; /* Change to flex-start to allow content to extend beyond container width */
         list-style: none;
 
         .CategoryListItems{
@@ -13,6 +21,8 @@
             padding: 30px;
             max-width: 100px;
             border-radius: 5px;
+            min-width: 100px;
+            margin-left: 8px;
 
 
             .categoryLogo{
@@ -39,4 +49,19 @@
         }
        
     }
+    
 }
+
+@media screen and (max-width:425px) {
+    .categoriesContainerMain{
+        .categoriesContainer{
+            padding: 0 16px;
+
+            .CategoryListItems{
+                padding: 15px;
+            }
+        }
+    }
+}
+
+ 
