--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -22,4 +22,10 @@
   background-color: #ffffff;
   font-weight: 600;
   letter-spacing: 0.5px;
+}
+
+@media screen and (max-width: 425px) {
+  .footerContainer {
+    padding: 0 16px;
+  }
 }/*# sourceMappingURL=Footer.css.map */
