--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -7,6 +7,13 @@
     width: 100%;
     z-index: 10;
 }
+
+@mixin mobile{
+    @media screen and (max-width:$mobile) {
+        @content;
+    }
+}
+
 .navBarContainer{
     letter-spacing: 0.5px;
     display: flex;
@@ -34,7 +41,7 @@
         input{
             padding: 12.5px;
             border: none;
-            width: 350px;
+            width: 250px;
             outline: none;
         }
     }
@@ -94,28 +101,11 @@
         }
     }
 
-    @mixin mdDisplay{
-        @media screen and (max-width:$mdDisplay) {
-            @content;
-        }
-    }
+    
+    
 
-    @include mdDisplay{
-        
-    }
-
-
-
-
-
-
-    @mixin tablet{
-        @media screen and (max-width:$tablet) {
-            @content;
-        }
-    }
-
-    @include tablet(){
+    @include mobile{
+        padding: 0 4px;
         .searchInput{
             display: flex;
             justify-content: center;
@@ -132,22 +122,10 @@
             input{
                 padding: 12.5px;
                 border: none;
-                width: 150px;
+                width: 50px;
                 outline: none;
             }
         }
-    }
-
-
-
-
-    @mixin mobile{
-        @media screen and (max-width:$mobile) {
-            @content;
-        }
-    }
-
-    @include mobile(){
-        background-color: rgb(225, 20, 20);
-    }
+    }     
+    
 }
