--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -20,4 +20,10 @@
   height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media screen and (max-width: 425px) {
+  .carouselContainer {
+    padding: 0 12px;
+  }
 }/*# sourceMappingURL=Carousel.css.map */
