--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .categoriesContainerMain {
-  padding: 0 32px;
+  scrollbar-width: none;
+  overflow-x: auto;
+}
+.categoriesContainerMain::-webkit-scrollbar {
+  display: none;
 }
 .categoriesContainerMain .categoriesContainer {
+  padding: 0 64px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /* Change to flex-start to allow content to extend beyond container width */
   list-style: none;
 }
 .categoriesContainerMain .categoriesContainer .CategoryListItems {
@@ -12,6 +17,8 @@
   padding: 30px;
   max-width: 100px;
   border-radius: 5px;
+  min-width: 100px;
+  margin-left: 8px;
 }
 .categoriesContainerMain .categoriesContainer .CategoryListItems .categoryLogo {
   background-color: #00A896;
@@ -30,4 +37,13 @@
   cursor: pointer;
   transition: all 0.2s ease-in;
   box-shadow: 5px 5px #00A896 inset;
+}
+
+@media screen and (max-width: 425px) {
+  .categoriesContainerMain .categoriesContainer {
+    padding: 0 16px;
+  }
+  .categoriesContainerMain .categoriesContainer .CategoryListItems {
+    padding: 15px;
+  }
 }/*# sourceMappingURL=Categories.css.map */
