--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -30,3 +30,9 @@
         letter-spacing: 0.5px;
     }
 }
+@media screen and (max-width:425px) {
+    .footerContainer{
+      padding: 0 16px;
+      
+    }
+  }
