--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,18 @@ body {
   margin: 0;
     font-family: 'Inter', sans-serif;
 }
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+background-color: #004942;
+/* outline: 1px solid slategrey; */
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
