updated on 8/12/23 product started

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -23,6 +23,9 @@
   font-weight: 600;
   letter-spacing: 0.5px;
 }
+.footerContainer .footerCheckoutBtn:hover {
+  cursor: pointer;
+}
 
 @media screen and (max-width: 425px) {
   .footerContainer {
