--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -33,6 +33,7 @@
 }
 .navBarContainer .loginAndSignup {
   display: flex;
+  height: 50px;
 }
 .navBarContainer .loginAndSignup .logButton {
   margin-right: 5px;
@@ -61,6 +62,7 @@
   margin-right: 5px;
   padding: 10px;
   width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
