--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -48,6 +48,7 @@
 
     .loginAndSignup{
         display: flex;
+        height: 50px;
         .logButton{
             margin-right: 5px;
             padding: 10px;
@@ -65,6 +66,7 @@
             .bagIcon{
                 margin-left: 12px;
                 font-size: large;
+                
             }
 
             .logIcon{
@@ -78,6 +80,7 @@
             margin-right: 5px;
             padding: 10px;
             width: 50px;
+            height: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
