updated on 9/12/23 product started

--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -56,8 +56,12 @@
   line-height: 20px;
   margin-top: -24px;
 }
+.productDetailsContainer .productDetails .productPriceContainer {
+  display: flex;
+}
 .productDetailsContainer .productDetails .productPrice {
   font-size: 35px;
+  margin-right: 32px;
 }
 .productDetailsContainer .productDetails .deliveryDetails {
   display: flex;
