--- a/src/Components/CartComponent/CartComponent.scss
+++ b/src/Components/CartComponent/CartComponent.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .cartComponentContainer{
-    padding: 0 128px;
+    padding: 0 256px;
     margin-top: 128px;
     margin-bottom: 128px;
 
@@ -39,12 +39,17 @@
 
             .cartIncAndDecContainer{
 
-                margin-top: 32px;
+                margin-top: 12px;
+                margin-bottom: 12px;
                 button{
                     background-color: $secondaryColor;
                     border: none;
                     margin-left: 5px;
                     margin-right: 5px;
+
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
 
                 .cartDecrementBtn{
@@ -105,7 +110,34 @@
         }
         
     }
+
+    .billingContainerMain{
+        border: 1px solid rgb(198, 198, 198);
+        padding: 0 64px;
+        margin-top: 12px;
+
+        .billingContainerPrice{
+            display: flex;
+            justify-content: space-between;
+            margin-top: -14px;
+
+        }
+        .billingContainerTax{
+            @extend .billingContainerPrice
+        }
+
+        .billingContainerDelivery{
+            @extend .billingContainerPrice
+        }
+    }
 }
+
+@media screen and (max-width:1024px) {
+    .cartComponentContainer{
+        padding:  0 128px;
+    }
+}
+
 @media screen and (max-width:768px) {
     .cartComponentContainer{
         padding:  0 64px;
@@ -118,6 +150,59 @@
 
         .cartProduct{
             flex-direction: column;
+
+            img{
+                width: 96%;
+            }
+
+
+            .cartInternalProductDetails{
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+    
+                .cartIncAndDecContainer{
+    
+                    margin-top: 12px;
+                    margin-bottom: 12px;
+                    display: flex;
+                    justify-content:start;
+
+                }
+    
+                .productDesc{
+                    margin-left: 12px;
+                    font-size: map-get($fontSize, small );
+                    width: 90%;
+                }
+    
+                .productPrice{
+    
+                        margin-left: 12px;
+                        font-size: map-get($fontSize, medium );
+                
+                }
+            }
         }
+        .billingContainerMain{
+            border: 1px solid rgb(198, 198, 198);
+            padding: 0 32px;
+            margin-top: 12px;
+    
+            .billingContainerPrice{
+                display: flex;
+                justify-content: space-between;
+                margin-top: -14px;
+    
+            }
+            .billingContainerTax{
+                @extend .billingContainerPrice
+            }
+    
+            .billingContainerDelivery{
+                @extend .billingContainerPrice
+            }
+        }
+        
     }
 }
