--- a/src/Components/CartBill/CartBill.scss
+++ b/src/Components/CartBill/CartBill.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .billingContainerMain{
     border: 1px solid rgb(198, 198, 198);
     padding: 0 64px;
@@ -16,5 +18,12 @@
 
     .billingContainerDelivery{
         @extend .billingContainerPrice
+    }
+    
+};
+
+@media screen and (max-width:425px) {
+    .billingContainerMain{
+        padding:  0 16px;
     }
 }
