--- a/src/Components/DeliveryInfo/DeliveryInfo.css
+++ b/src/Components/DeliveryInfo/DeliveryInfo.css
@@ -99,5 +99,129 @@
 }
 
 .continurToPayButton {
-  margin-bottom: 188px;
+  margin-bottom: 200px;
+  margin-top: 12px;
+}
+.continurToPayButton button {
+  width: 100%;
+  padding: 15px;
+  background-color: #313131;
+  color: #ffffff;
+  border: none;
+}
+
+@media screen and (max-width: 425px) {
+  .deliveryInfoContainer {
+    padding: 0 12px;
+    border: 1px solid rgb(204, 204, 204);
+    margin-top: -16px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer {
+    padding: 20px;
+    background-color: rgb(244, 244, 244);
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryNameContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryNameContainer .deliveryName, .deliveryInfoContainer .deliveryInputsContainer .delveryNameContainer .deliveryPhone {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryNameContainer .deliveryName input, .deliveryInfoContainer .deliveryInputsContainer .delveryNameContainer .deliveryPhone input {
+    padding: 10px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryAddressContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryLandmarkContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryLandmarkContainer .deliveryLadmarkName, .deliveryInfoContainer .deliveryInputsContainer .delveryLandmarkContainer .deliveryStreetName {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delveryLandmarkContainer .deliveryLadmarkName input, .deliveryInfoContainer .deliveryInputsContainer .delveryLandmarkContainer .deliveryStreetName input {
+    padding: 10px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryPincode {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryPincode input {
+    padding: 10px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryGPS {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryGPS button {
+    margin-top: 19px;
+    padding: 10px;
+    background-color: #F0F4FF;
+    border: 0.5px solid black;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryGPS button .locationIcon {
+    margin-right: 12px;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .delverypincodeAndLocationContainer .deliveryGPS button:hover {
+    cursor: pointer;
+    background-color: #ffffff;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .addAnAddressBtn {
+    width: 100%;
+    margin-top: 12px;
+    padding: 15px;
+    color: #ffffff;
+    background-color: #00A896;
+    border: none;
+  }
+  .deliveryInfoContainer .deliveryInputsContainer .addAnAddressBtn:hover {
+    cursor: pointer;
+  }
+  .deliveryInfoContainer .alreadySavedAddressesContainer .radio label {
+    display: flex;
+    align-items: center;
+    border: 1px solid rgb(216, 216, 216);
+    margin-bottom: 8px;
+    padding: 20px;
+  }
+  .deliveryInfoContainer .alreadySavedAddressesContainer .radio label:hover {
+    cursor: pointer;
+  }
+  .deliveryInfoContainer .alreadySavedAddressesContainer .radio label p {
+    margin-left: 32px;
+    margin-top: -12px;
+  }
+  .continurToPayButton {
+    margin-bottom: 200px;
+    margin-top: 12px;
+  }
+  .continurToPayButton button {
+    width: 100%;
+    padding: 15px;
+    background-color: #313131;
+    color: #ffffff;
+    border: none;
+  }
 }/*# sourceMappingURL=DeliveryInfo.css.map */
