--- a/src/Components/DeliveryInfo/DeliveryInfo.css
+++ b/src/Components/DeliveryInfo/DeliveryInfo.css
@@ -83,19 +83,32 @@
 .deliveryInfoContainer .deliveryInputsContainer .addAnAddressBtn:hover {
   cursor: pointer;
 }
-.deliveryInfoContainer .alreadySavedAddressesContainer .radio label {
+.deliveryInfoContainer .alreadySavedAddressesContainer form {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.deliveryInfoContainer .alreadySavedAddressesContainer form .radio label {
   display: flex;
   align-items: center;
   border: 1px solid rgb(216, 216, 216);
   margin-bottom: 8px;
   padding: 20px;
 }
-.deliveryInfoContainer .alreadySavedAddressesContainer .radio label:hover {
+.deliveryInfoContainer .alreadySavedAddressesContainer form .radio label:hover {
   cursor: pointer;
 }
-.deliveryInfoContainer .alreadySavedAddressesContainer .radio label p {
+.deliveryInfoContainer .alreadySavedAddressesContainer form .radio label p {
   margin-left: 32px;
   margin-top: -12px;
+}
+.deliveryInfoContainer .alreadySavedAddressesContainer form .radio label .removeBtn {
+  background-color: #ffffff;
+  border: none;
+  color: blue;
+}
+.deliveryInfoContainer .alreadySavedAddressesContainer form .radio label .removeBtn:hover {
+  cursor: pointer;
 }
 
 .continurToPayButton {
@@ -108,6 +121,9 @@
   background-color: #313131;
   color: #ffffff;
   border: none;
+}
+.continurToPayButton button:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 425px) {
