--- a/src/Components/PaymentOptions/PaymentOptions.scss
+++ b/src/Components/PaymentOptions/PaymentOptions.scss
@@ -1,15 +1,58 @@
 @import '../variables';
 
-.paymentOtionsContainer{
+
+
+.paymentOtionsContainer {
     margin-top: 128px;
     padding: 0 300px;
+    // background-color: #f0f0f0;
 
-    .paymentMethodsContainer{
-        padding: 10px;
-        background-color: rgb(234, 234, 234);
-
-       
+    .payNowBtn{
+        width: 100%;
+        padding: 15px;
+        background-color: $textColor;
+        border: none;
+        color: $secondaryColor;
+        margin-top: 12px;
         
+    }
+  }
+  
+  .paymentMethodsContainer {
+    padding: 30px;
+    border: 1px solid rgb(215, 215, 215);
 
+    // background-color: rgb(234, 234, 234);
+  }
+  
+  .collapsibleContent {
+    padding: 10px;
+    background-color: #f0f0f0;
+    // margin-top: 10px;
+    border-radius: 5px;
+    display: block;
+  }
+
+  .paymentMethod{
+    margin-top: -24px;
+    margin-bottom: 32px;
+
+    h5{
+        border-bottom: 1px solid black;
+    }
+
+   
+    
+  }
+
+  @media screen and (max-width:1024px) {
+    .paymentOtionsContainer{
+        padding:  0 64px;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .paymentOtionsContainer{
+        padding:  0 32px;
     }
 }
